# FloSystem

./: .dockerignore  .gitignore  Dockerfile  README.md  aws_install.sh  bash_includes  dev_install.sh  docker-compose-podium-sim.yml  docker-compose-robot-sim.yml  docker-compose-turn.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker_sim_launcher.sh  floFace.js  floSim.html  gen_install.sh  init-letsencrypt-turn.sh  init-letsencrypt.sh  install.sh  mySyncConfig.lua  node_install.sh  nvm_install.sh  podium_tmux_launcher.sh  pull_db.sh  pull_latest_bag.sh  realsense_install.sh  robot_install.sh  robot_tmux_launcher.sh  sider.yml  sim_tmux_launcher.sh  start_robot.sh  templateSyncConfig.lua  update_flo.sh
.github/workflows/: install-build.yml  ros.yml  syntax.yaml  web.yaml
bolide/: .gitignore  README.md  SettingUp.md  com protocol.md
bolide/Bolide_Y-01_Firmware_v2.0.0/: Bolide_Y-01_Firmware_v2.0.0.ino  Y-01_Mask_Definition.h  Y-01_USER_MOTION.h
demo/: README.md  demo.ino  faces_demo.json  generator.py  read_faces.py  send_faces.py
design_notebooks/camera_fov/: Field of view.ipynb
face/demo/: README.md  faces_demo.json
face/teensy/: communications.md  teensy.ino
flo_core/: CMakeLists.txt  package.xml
flo_core/config/: keyop_smoother.yaml  polly.yaml
flo_core/html/: demo.html
flo_core/launch/: export_images.launch  extract_bag_images.launch  flo_bringup.launch  flo_sim.launch  mantaro_bringup.launch  podium_bringup.launch  recording.launch  remote_bringup.launch  safe_keyop.launch  tts_polly.launch
flo_core/msg/: GameCommandOptions.msg  GameDef.msg  Pose.msg  PoseSeq.msg  StepDef.msg
flo_core/src/: db.py  flo_db.py  game_runner.py  generate_game.py  go_to_pose.py  make_db.py  manage_seq_pose.py  param_saver.py  podium.py  record_poses.py  recording_manager.py  ros_based_move_demo.py  simon_says.py  stream.py  strip_tags.py  target_touch.py  tts_node.py  tty_keyboard_teleop.py
flo_core/srv/: GetPoseSeqID.srv  SearchGameBucket.srv  SearchPose.srv  SearchPoseSeq.srv  SearchUtterance.srv  SetPoseSeq.srv  SetUtterance.srv
flo_core/web_app/: package.json
flo_core/web_app/public/: index.html  manifest.json
flo_core/web_app/src/: App.jsx
flo_core/web_app/src/components/: Header.jsx  urdf.jsx
flo_core_defs/: CMakeLists.txt  package.xml
flo_core_defs/msg/: DBUpdate.msg  GameAction.msg  GameBucket.msg  GameDef.msg  TTSState.msg
flo_core_defs/srv/: GetGameBucketID.srv  GetPoseID.srv  SetGameBucket.srv  SetPose.srv  SetRecording.srv
flo_face/: .gitignore  CMakeLists.txt  floFace.js  package.xml
flo_face/data/: faces.json
flo_face/demo/: send_faces.py
flo_face/faces/: eyes_rot.m
flo_face/flo_face/: CMakeLists.txt  package.xml
flo_face/flo_face/data/: faces.json
flo_face/flo_face/launch/: base.launch
flo_face/flo_face/src/: com_manager.py  com_test.py  experiment_manager.py  face_manager.py  keyboard_teleop.py  serial_coms
flo_face/flo_face/srv/: SetFaceBrightness.srv
flo_face/flo_face_defs/: CMakeLists.txt  package.xml
flo_face/flo_face_defs/msg/: FaceState.msg
flo_face/flo_face_defs/srv/: GetFaceOptions.srv  SetFace.srv
flo_face/msg/: FaceState.msg
flo_face/src/: com_manager.py  experiment_manager.py  face_manager.py  keyboard_teleop.py
flo_face/srv/: SetEyeDirection.srv  SetFace.srv
flo_face/teensy/: teensy.ino
flo_humanoid/: CMakeLists.txt  README.md  package.xml  polly_test.py  running
flo_humanoid/action/: Move.action
flo_humanoid/config/: joints
flo_humanoid/launch/: control_visualize.launch  sample_application.launch  urdf.launch
flo_humanoid/msg/: JointTarget.msg
flo_humanoid/rviz/: urdf.rviz
flo_humanoid/src/: make_db.py  motor_demo.py  motor_read.py  motor_test.py  read_from_bolide.py  robot_controller.py  ros_based_move_demo.py
flo_humanoid/urdf/: flo.urdf.xacro
flo_humanoid/urdf/CAD_refs/: FLO LOWER ARM - LEFT.dae  FLO LOWER ARM - LEFT.stl  FLO LOWER ARM - RIGHT.dae  FLO LOWER ARM - RIGHT.stl  FLO-ARM-01 UPPER ARM MOUNT - FLO-ARM-LEFT-01 UPPER ARM MOUNT.stl  FLO-ARM-01 UPPER ARM MOUNT - FLO-ARM-RIGHT-01 UPPER ARM MOUNT.dae  FLO-ARM-01 UPPER ARM MOUNT - FLO-ARM-RIGHT-01 UPPER ARM MOUNT.stl  FLO-ARM-02 MIDDLE ARM DOUBLE MOUNT-LEFT.dae  FLO-ARM-02 MIDDLE ARM DOUBLE MOUNT-LEFT.stl  FLO-ARM-02 MIDDLE ARM DOUBLE MOUNT-RIGHT.dae  FLO-ARM-04 MID ARM CONNECTOR - FLO-ARM-LEFT-04 MID ARM CONNECTOR.stl  NECK - FLO-HEAD-01 - NECK.dae
flo_humanoid_defs/: CMakeLists.txt  package.xml
flo_post-processing/: ReadMe.md
flo_post-processing/Launch/: rgb.launch
flo_telepresence/: CMakeLists.txt  package.xml
flo_telepresence/launch/: audio.launch  cam_sim.launch  control.launch  cv_cam.launch  fisheye_cam.launch  min_realsense.launch  realsense-sp-1.launch  realsense-sp-2.launch  realsense.launch  robot.launch  telepresence.launch  test_audio.launch  test_audio_capture.launch  test_audio_play.launch  usb_cam.launch  vid_stream_opencv.launch  videodemo.launch  webrtc-sim.launch  webrtc.launch
flo_telepresence/src/: display-canvas.prof  display-canvas.py  display-cv-simple.py  display-cv.prof  display-cv.py  display.prof  display.py  display_cv.py  image_concat.py
flo_web/: CMakeLists.txt  Dockerfile  Dockerfile-turn  README.md  datadog.env  nginx-dev.conf  nginx-prod.conf  nginx-turn.conf  nginx.conf  package.xml
flo_web/launch/: web_app.launch
flo_web/pinger/: pinger.py
flo_web/src/: socketIOconnector.py  wsConnector.py  wsFactory.py
flo_web/turn_server/: Dockerfile  crontab  index.html  turnserver.conf
flo_web/web_app/: '  .eslintrc.js  .snyk  Dockerfile  README.md  package-lock.json  package.json
flo_web/web_server/: .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json
flo_web/webrtc_robot_router/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/base/: joystick.css  joystick.html  joystick.ts
robot/base/: server.py
robot/humanoid/: README.md  SettingUp.md  (+4 more)
system_monitor/: CMakeLists.txt  package.xml
teensy/: FloFace.cpp  FloFace.h  teensy.ino
utility_scripts/: disconnect_drive.sh  split_bag.sh
(+209 files in other folders)
