<?xml version="1.0"?>
<package format="2">
  <name>flo_core_defs</name>
  <version>0.0.0</version>
  <description>The message and service definitions for the flo core package</description>
  <maintainer email="mjsobrep@seas.upenn.edu">Michael Sobrepera</maintainer>
  <license>proprietery</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>flo_humanoid_defs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>flo_humanoid_defs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>flo_humanoid_defs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <!--Non-ROS dependencies to be brought in by ros dep-->
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
