<?xml version="1.0"?>
<package format="2">
  <name>flo_humanoid</name>
  <version>0.0.0</version>
  <description>The flo_humanoid package for interacting with the Bolide robot</description>
  <maintainer email="mjsobrep@seas.upenn.edu">Michael Sobrepera</maintainer>
  <license>proprietery</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>flo_humanoid_defs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
