<?xml version="1.0"?>
<package format="2">
  <name>flo_humanoid_defs</name>
  <version>0.0.0</version>
  <description>The message and action definitions for the flo_humanoid package</description>
  <maintainer email="mjsobrep@seas.upenn.edu">Michael Sobrepera</maintainer>
  <license>proprietery</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
