<?xml version="1.0"?>
<package format="2">
  <name>flo_telepresence</name>
  <version>0.0.0</version>
  <description>Package which provides launch files for the telepresence components and handles the screen for the remote operator on the robot</description>
  <maintainer email="mjsobrep@seas.upenn.edu">Michael Sobrepera</maintainer>
  <license>proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>audio_play</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>webrtc_ros</exec_depend>
  <exec_depend>python-imaging-imagetk</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
