<?xml version="1.0"?>
<package format="2">
  <name>flo_face</name>
  <version>0.0.0</version>
  <description>Manage state for, interface with, and control flo's face</description>
  <maintainer email="mjsobrep@seas.upenn.edu">Michael Sobrepera</maintainer>
  <license>propriatary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>flo_face_defs</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
